Revert "Fix fields section alignment, replace meatball with trash can"
This reverts commit a45e2fde054dc3f1fd3533aa3d079be13c932405.

--- a/app/src/shared/components/FieldList/FieldItem/fieldItem.pcss
+++ b/app/src/shared/components/FieldList/FieldItem/fieldItem.pcss
@@ -15,14 +15,13 @@
   box-sizing: content-box;
   border-radius: 4px;
   left: -32px;
-  padding: 1em 56px 1em 32px;
+  padding: 1em 1em 1em 32px;
   position: relative;
   width: 100%;
 }
 
 .helper .handle,
-.root:--enter .handle,
-.root:--enter .trashIcon {
+.root:--enter .handle {
   display: block;
 }
 
