--- a/app/src/userpages/components/StreamPage/Edit/ConfigureView/NewFieldEditor/newFieldEditor.pcss
+++ b/app/src/userpages/components/StreamPage/Edit/ConfigureView/NewFieldEditor/newFieldEditor.pcss
@@ -7,7 +7,7 @@
   position: relative;
   width: 100%;
   background: #F5F5F5;
-  max-width: 748px;
+  max-width: 682px;
 }
 
 .addButton {
