--- a/app/src/userpages/components/StreamPage/Edit/ConfigureView/configureView.pcss
+++ b/app/src/userpages/components/StreamPage/Edit/ConfigureView/configureView.pcss
@@ -4,7 +4,7 @@
 
 .fieldHeaderRow,
 .fieldItem {
-  max-width: 748px;
+  max-width: 675px;
 }
 
 .helpText {
